# wonnx-embeddings-repro

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx
