[package]
name = "wonnx-embeddings-repro"
authors = ["Jacob Marshall <me@jhqcat.com>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "=0.3.61", features = ["console"] }
js-sys = "0.3.69"
wonnx = "0.5.1"
tokenizers = { version = "0.19.1" , default-features = false, features = ["unstable_wasm"] }
